sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value j
    while (j!=0 && !b) {
           ^AlgInsertionSort:9: error: not found: value j
      if (getValeur(j)>v) {
                    ^AlgInsertionSort:10: error: not found: value j
        setValeur(j+1,getValeur(j))
                  ^AlgInsertionSort:10: error: not found: value j
        setValeur(j+1,getValeur(j))
                                ^AlgInsertionSort:13: error: not found: value j
        setValeur(j,v)
                  ^AlgInsertionSort:16: error: not found: value j
      j-=1
      ^