sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v=getValeur(0)
  var b=true
  for (i <- 1 to getNombreValeurs()-1) {
    v=getValeur(i)
    b=false
    while (j!=0 && !b) {
      if (getValeur(j)>v) {
        setValeur(j+1,getValeur(j))
      }
      else {
        setValeur(j,v)
        b=true
      }
      j-=1
    }
  }
}